--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -6,6 +6,11 @@
     <li><a href="{{ url_for('pure_html')}}">pure_login</a></li>
     <li><a href="{{ url_for('basic_login')}}">basic-login</a></li>
     <li><a href="{{ url_for('bootstrap')}}">bootstrap-login</a></li>
-    <li><a href="{{ url_for('upload')}}">upload</a></li>
+    <li><a href="{{ url_for('upload')}}">upload-单文件</a></li>
+    <li><a href="{{ url_for('multi_upload')}}">multi-upload</a></li>
+    <li><a href="{{ url_for('integrate_ckeditor')}}">ckeditor</a></li>
+    <li><a href="{{ url_for('two_submits')}}">two_submits</a></li>
+    <li><a href="{{ url_for('multi_form')}}">multi_form</a></li>
+    <li><a href="{{ url_for('multi_form_multi_view')}}">multi_form_multi_view</a></li>
 </ul>
 {% endblock %}
