--- a/demo/templates/upload.html
+++ b/demo/templates/upload.html
@@ -4,9 +4,9 @@
 {% block content %}
 <h2>Upload Form</h2>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {{ form.csrf_token }}
-    {{ form_field(form.photo)}}<br>
+    {{ form_field(form.photo) }}<br>
     {{ form.submit }}<br>
 </form>
 {% endblock %}
